crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_multiline_type_annotation_is_not_hoisted.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from 'vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'anonymous',
  setup(__props) {

const _: SomeType<
  false
> = true;

return (_ctx: any,_cache: any) => {
  return null
}
}

})
