crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_sfc_ssr_uses_setup_bindings_for_lowercase_imported_components.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { ssrRenderComponent as _ssrRenderComponent } from "@vue/server-renderer"


function ssrRender(_ctx, _push, _parent, _attrs, $props, $setup, $data, $options) {
  _push(_ssrRenderComponent($setup.Primitive, _attrs, null, _parent))
}
import { Primitive } from '@tresjs/core'


export default /*@__PURE__*/_defineComponent({
  __name: 'anonymous',
  ssrRender: ssrRender,
  setup(__props) {


const __returned__ = { Primitive }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}

})
