crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_sfc_uses_setup_bindings_for_kebab_case_imported_components.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { createVNode as _createVNode, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment } from "vue"

import DashTest from './dash-test.vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'anonymous',
  setup(__props) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock(_Fragment, null, [
    _createVNode(DashTest),
    _createVNode(DashTest)
  ], 64 /* STABLE_FRAGMENT */))
}
}

})
