crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_sfc_uses_setup_member_bindings_for_dotted_components.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { createVNode as _createVNode, openBlock as _openBlock, createBlock as _createBlock, withCtx as _withCtx } from "vue"

const _hoisted_1 = { label: "Teacher" }

import { Form, Input } from 'ant-design-vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'anonymous',
  setup(__props) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createBlock(Form.Item, { label: "Teacher" }, {
    default: _withCtx(() => [
      _createVNode(Input)
    ]),
    _: 1 /* STABLE */
  }))
}
}

})
